--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -1,9 +1,12 @@
 <h1>{{ breweriesCtrl.test }}</h1>
 
+
+<input ng-model="breweriesCtrl.search" ng-change="breweriesCtrl.refilter()" placeholder="Search by name or state (e.g., Orpheus or Georgia)">
 <br />
+
 <a href="" ui-sref="create">Add a Brewery</a>  
 <br />
 
 <ul id="breweries-list" ng-click>
-    <li ng-repeat="brewery in breweriesCtrl.breweries track by brewery.id" ng-bind="brewery.name + ', ' + brewery.state_name"></li>
+    <li ng-repeat="brewery in breweriesCtrl.filteredList" ng-bind="brewery.name + ', ' + brewery.state_name"></li>
 </ul>
