--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -1,12 +1,14 @@
 <h1>{{ breweriesCtrl.test }}</h1>
 
 
+<!-- General Search Function -->
 <label for="search">Search: </label>
 <input ng-model="breweriesCtrl.searchTerm" ng-change="breweriesCtrl.refilter()" placeholder="Search by name or state (e.g., Orpheus or Georgia)">
 <br />
 
+<!-- Filter by State Function -->
 <label for="filter">Filter by State: </label>
-<select ng-controller="StatesController as statesCtrl" ng-model="breweriesCtrl.searchState" ng-change="breweriesCtrl.refilter()" ng-options="state.name as state.name for state in statesCtrl.states">
+<select ng-controller="StatesController as statesCtrl" ng-model="breweriesCtrl.searchState" ng-change="breweriesCtrl.refilter()" ng-options="state.name as state.name for state in statesCtrl.states track by state.id">
     <option value="">-Select State-</option>
 </select>
 <br />
