--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -18,6 +18,6 @@
 
 <ul id="breweries-list" ng-click>
     <li ng-repeat="brewery in breweriesCtrl.filteredList track by brewery.id">
-        <a href="" ui-sref="breweries.show({ id: brewery.id })">{{ brewery.name }}, {{ brewery.state_name }}</a>
+        <a href="" ui-sref="breweries.show({ breweryId: brewery.id })">{{ brewery.name }}, {{ brewery.state_name }}</a>
     </li>
 </ul>
