--- a/app/assets/javascripts/breweries/show.html
+++ b/app/assets/javascripts/breweries/show.html
@@ -1,3 +1,3 @@
 <h1>Show a Brewery</h1>
-{{ breweryShowCtrl.brewery.name }} <br />
-{{ breweryShowCtrl.brewery.state_name }} <br />
+{{ breweriesShowCtrl.brewery.name }} <br />
+{{ breweriesShowCtrl.brewery.state.name }} <br />
