--- a/app/assets/javascripts/breweries/show.html
+++ b/app/assets/javascripts/breweries/show.html
@@ -1,3 +1,5 @@
 <h1>Show a Brewery</h1>
 {{ breweriesShowCtrl.brewery.name }} <br />
 {{ breweriesShowCtrl.brewery.state.name }} <br />
+
+<a href="" ui-sref="breweries.edit({ breweryId: breweriesShowCtrl.brewery.id })"></a>
