add dynamic showing of changed info to 'breweries.edit'

--- a/app/assets/javascripts/breweries/edit.html
+++ b/app/assets/javascripts/breweries/edit.html
@@ -10,6 +10,13 @@
               <option name="current-state" label="{{ breweriesShowCtrl.brewery.state.name }}" ng-bind="breweriesShowCtrl.brewery.state.id"></option>
         </select>
     </div>
+    <br />
+
+    <div>After updates the information will be:
+        <br />
+        Name: <span ng-bind="breweriesShowCtrl.brewery.name"></span>
+    </div>
+    <br />
 
     <input type="submit" name="Edit Brewery">
   
