add new Breweries fields to strong_params

--- a/app/assets/javascripts/breweries/show.html
+++ b/app/assets/javascripts/breweries/show.html
@@ -1,6 +1,8 @@
 <h1>Show a Brewery</h1>
-{{ breweriesShowCtrl.brewery.name }} <br />
-{{ breweriesShowCtrl.brewery.state.name }} <br />
+Name: {{ breweriesShowCtrl.brewery.name }} <br />
+Website: {{ breweriesShowCtrl.brewery.url }} <br />
+Address: {{ breweriesShowCtrl.brewery.address }} <br />
+State: {{ breweriesShowCtrl.brewery.state.name }} <br />
 
 <br />
 
