--- a/app/assets/javascripts/breweries/show.html
+++ b/app/assets/javascripts/breweries/show.html
@@ -1,6 +1,6 @@
 <h1>Show a Brewery</h1>
 Name: {{ breweriesShowCtrl.brewery.name }} <br />
-Website: {{ breweriesShowCtrl.brewery.url }} <br />
+Website: <a href="{{ breweriesShowCtrl.brewery.url }}" target="_blank">{{ breweriesShowCtrl.brewery.url }}</a><br />
 Address: {{ breweriesShowCtrl.brewery.address }} <br />
 State: {{ breweriesShowCtrl.brewery.state.name }} <br />
 
