--- a/app/assets/javascripts/breweries/create.html
+++ b/app/assets/javascripts/breweries/create.html
@@ -1,8 +1,12 @@
 <h1>Let's Make a Brewery</h1>
-<form ng-submit="breweriesCtrl.createBrewery()">
+<form name="form" ng-submit="breweriesCtrl.createBrewery()">
     
     <label for="name">Name: </label>
-    <input ng-model="breweriesCtrl.brewery.name" required="required"></input>
+    <input type="text" name="name" ng-model="breweriesCtrl.brewery.name" minlength="3" required="required"></input>
+    <div ng-messages="form.name.$error" ng-show="form.name.$touched || form.$submitted">
+        <div ng-message="required">Please provide a name.</div>
+        <div ng-message="minlength">Name must be at least 3 letters long.</div>
+    </div>
     <br />
 
     <label for="address">Address: </label>
@@ -12,15 +16,21 @@
     <label for="state">State: </label>
     <span ng-controller="StatesController as statesCtrl">
 
-        <select ng-model="breweriesCtrl.brewery.state_id" ng-options="state.id*1 as state.name for state in statesCtrl.states" required="required">
+        <select name="state" ng-model="breweriesCtrl.brewery.state_id" ng-options="state.id*1 as state.name for state in statesCtrl.states" required="required">
             <option value="">-Select A State-</option>
         </select>
 
     </span>
+    <div ng-messages="form.state.$error" ng-show="form.state.$touched || form.$submitted">
+        <div ng-message="required">Please select a state from the dropdown options.</div>
+    </div>
     <br />
 
     <label for="url">Website: </label>
-    <textarea ng-model="breweriesCtrl.brewery.url" required="required"></textarea>
+    <textarea type="text" name="url" ng-model="breweriesCtrl.brewery.url" required="required"></textarea>
+    <div ng-messages="form.url.$error" ng-show="form.url.$touched || form.$submitted">
+        <div ng-message="required">Please provide a website.</div>
+    </div>
     <br />
 
     <p>
