add 'angular-devise' via Bower for Angular frontend authentication

--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -13,7 +13,7 @@
 </select>
 <br />
 
-<a href="" ui-sref="create">Add a Brewery</a>  
+<a href="" ui-sref="breweries.create">Add a Brewery</a>  
 <br />
 <br />
 Showing {{ breweriesCtrl.filteredList.length }}  Breweries
