add Navbar and nest all other states under 'home'

--- a/app/assets/javascripts/breweries/home.html
+++ b/app/assets/javascripts/breweries/home.html
@@ -1,4 +1,4 @@
 <h1>Breweries Main Page</h1>
-<a href="" ui-sref="breweries.index">Breweries</a>
-<a href="" ui-sref="breweries.create">Add a Brewery</a>
+<a href="" ui-sref="home.breweries.index">Breweries</a>
+<a href="" ui-sref="home.breweries.create">Add a Brewery</a>
 <ui-view></ui-view>
