--- a/app/assets/javascripts/faq/home.html
+++ b/app/assets/javascripts/faq/home.html
@@ -1,6 +1,6 @@
 <h1>FAQ</h1>
 <br/>
-  <a href="" ui-sref="faq.history">History</a><br />
-  <a href="" ui-sref="faq.science">Science</a>
+  <a href="" ui-sref="home.faq.history">History</a><br />
+  <a href="" ui-sref="home.faq.science">Science</a>
 <br/>
 <ui-view></ui-view>
