--- a/app/assets/javascripts/breweries/show.html
+++ b/app/assets/javascripts/breweries/show.html
@@ -6,6 +6,6 @@ State: {{ breweriesShowCtrl.brewery.state.name }} <br />
 
 <br />
 
-<a href="" ui-sref="breweries.edit({ breweryId: breweriesShowCtrl.brewery.id })">Edit Brewery</a>
+<a href="" ui-sref="home.breweries.edit({ breweryId: breweriesShowCtrl.brewery.id })">Edit Brewery</a>
 <br />
 <a href="" ng-click="breweriesShowCtrl.destroyBrewery(breweriesShowCtrl.brewery.id )">Delete Brewery</a>
