--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -1,3 +1,14 @@
 <h1>Home View</h1>
-<a href="" ui-sref="faq">Sour Beer FAQs</a>
-<a href="" ui-sref="breweries">Show Me The Brews</a>
+<div class="collapse navbar-collapse pull-right" ng-controller="NavbarController">
+    <ul class="nav navbar-nav">
+        <li><a href="" ui-sref="home">Home</a></li>
+        <li><a href="" ui-sref="home.faq">FAQ</a></li>
+        <li><a href="" ui-sref="home.breweries">Breweries</a></li>
+        <!-- will not show when signedIn() is true -->
+        <li ng-hide="signedIn()"><a href="" ui-sref="login">Log In</a></li>
+        <li ng-hide="signedIn()"><a href="" ui-sref="register">Register</a></li>
+        <!-- will only show when signedIn() is true -->
+        <li ng-show="signedIn()"><a href="" ng-click="logout()">Log Out</a></li>
+    </ul>
+</div>
+<ui-view></ui-view>    
