--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -1,15 +1,17 @@
 <h1>Pucker Up</h1>
-<div>
+<div ng-controller='HomeController as homeCtrl'>
     <ul>
         <li><a href="" ui-sref="home">Home</a></li>
         <li><a href="" ui-sref="home.faq">FAQ</a></li>
         <li><a href="" ui-sref="home.breweries">Breweries</a></li>
+        
         <!-- will not show when signedIn() is true -->
         <li ng-hide="signedIn()"><a href="" ui-sref="login">Log In</a></li>
         <li ng-hide="signedIn()"><a href="" ui-sref="register">Register</a></li>
+        
         <!-- will only show when signedIn() is true -->
         <li ng-show="signedIn()">Signed In as: {{ user.username }}</li>
-        <li ng-show="signedIn()"><a href="" ng-click="logout()">Log Out</a></li>
+        <li ng-show="signedIn()"><a href="" ng-click="homeCtrl.logout()">Log Out</a></li>
     </ul>
 </div>
 <!-- all app views nested from 'home' state -->
