--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -6,8 +6,8 @@
         <li><a href="" ui-sref="home.breweries">Breweries</a></li>
         
         <!-- will not show when signedIn() is true -->
-        <li ng-hide="signedIn()"><a href="" ui-sref="login">Log In</a></li>
-        <li ng-hide="signedIn()"><a href="" ui-sref="register">Register</a></li>
+        <li ng-hide="signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
+        <li ng-hide="signedIn()"><a href="" ui-sref="home.register">Register</a></li>
         
         <!-- will only show when signedIn() is true -->
         <li ng-show="signedIn()">Signed In as: {{ user.username }}</li>
