--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -6,12 +6,12 @@
         <li><a href="" ui-sref="home.breweries">Breweries</a></li>
         
         <!-- will not show when signedIn() is true -->
-        <li ng-hide="signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
-        <li ng-hide="signedIn()"><a href="" ui-sref="home.register">Register</a></li>
+        <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
+        <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.register">Register</a></li>
         
         <!-- will only show when signedIn() is true -->
-        <li ng-show="signedIn()">Signed In as: {{ user.username }}</li>
-        <li ng-show="signedIn()"><a href="" ng-click="homeCtrl.logout()">Log Out</a></li>
+        <li ng-show="homeCtrl.signedIn()">Signed In as: {{ homeCtrl.user.username }}</li>
+        <li ng-show="homeCtrl.signedIn()"><a href="" ng-click="homeCtrl.logout()">Log Out</a></li>
     </ul>
 </div>
 <!-- all app views nested from 'home' state -->
