--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -13,9 +13,7 @@
 <br />
 
 
-<div ng-controller="HomeController as homeCtrl" ng-show="homeCtrl.signedIn()">
-    <a href="" ui-sref="home.breweries.create">Add a Brewery</a>
-</div>  
+<a ng-controller="HomeController as homeCtrl" ng-show="homeCtrl.signedIn()" href="" ui-sref="home.create">Add a Brewery</a> 
 
 <br />
 <br />
@@ -28,6 +26,6 @@ Showing {{ breweriesCtrl.filteredList.length }}  Breweries
 
 <ul id="breweries-list" ng-click>
     <li ng-repeat="brewery in breweriesCtrl.filteredList track by brewery.id">
-        <a href="" ui-sref="home.breweries.show({ breweryId: brewery.id })">{{ brewery.name }}, {{ brewery.state_name }}</a>
+        <a href="" ui-sref="home.show({ breweryId: brewery.id })">{{ brewery.name }}, {{ brewery.state_name }}</a>
     </li>
 </ul>
