--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -2,8 +2,9 @@
 <div ng-controller='HomeController as homeCtrl'>
     <ul>
         <li><a href="" ui-sref="home">Home</a></li>
-        <li><a href="" ui-sref="home.faq">FAQ</a></li>
+        <li><a href="" ui-sref="home.about">About</a></li>
         <li><a href="" ui-sref="home.breweries">Breweries</a></li>
+        <li ng-show="homeCtrl.signedIn()"><a href="" ui-sref="home.create">+ Brewery</a></li>
         
         <!-- will not show when signedIn() is true -->
         <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
