working sample of GoogleMaps API

--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -5,6 +5,7 @@
         <li><a href="" ui-sref="home.about">About</a></li>
         <li><a href="" ui-sref="home.breweries">Breweries</a></li>
         <li ng-show="homeCtrl.signedIn()"><a href="" ui-sref="home.create">+ Brewery</a></li>
+        <li><a href="" ui-sref="home.map">Map</a></li>
         
         <!-- will not show when signedIn() is true -->
         <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
