--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" ng-controller="HomeController as homeCtrl">
+<nav id="main-navbar" class="navbar navbar-default" ng-controller="HomeController as homeCtrl">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -29,8 +29,9 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
 </nav>
-
 <div id="main-container" class="container-fluid">
     <!-- all app views nested from 'home' state -->
-    <ui-view></ui-view>        
+    <ui-view>
+      
+    </ui-view>        
 </div>
