--- a/app/assets/javascripts/map/map.html
+++ b/app/assets/javascripts/map/map.html
@@ -1,4 +1,4 @@
 <h1>Brewery Map</h1>
-<div id="map">
+<div id="map" class="center">
   <!-- GoogleMaps JavaScript API to insert map here -->
 </div>
