--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -17,13 +17,13 @@
               <li><a href="" ui-sref="home">Home</a></li>
               <li><a href="" ui-sref="home.about">About</a></li>
               <li><a href="" ui-sref="home.breweries">BreweryList</a></li>
-              <li ng-show="homeCtrl.signedIn()"><a href="" ui-sref="home.create">+ Brewery</a></li>
+              <li ng-show="homeCtrl.signedIn()"><a href="" ui-sref="home.create">Add Brewery</a></li>
               <li><a href="" ui-sref="home.map">BreweryMap</a></li>
               <!-- will not show when signedIn() is true -->
               <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.login">Log In</a></li>
               <li ng-hide="homeCtrl.signedIn()"><a href="" ui-sref="home.register">Register</a></li>
               <!-- will only show when signedIn() is true -->
-              <li ng-show="homeCtrl.signedIn()">Signed In as: {{ homeCtrl.user.username }}</li>
+              <li ng-show="homeCtrl.signedIn()"><span class="user">Signed in <i class="fa fa-user" aria-hidden="true"></i> : {{ homeCtrl.user.username }}</span></li>
               <li ng-show="homeCtrl.signedIn()"><a href="" ng-click="homeCtrl.logout()">Log Out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
