--- a/app/assets/javascripts/auth/login.html
+++ b/app/assets/javascripts/auth/login.html
@@ -1,15 +1,22 @@
-<div>
-    <h1>Log In</h1>
-</div>
+<div class="row form">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel pane-default">
+            <h1>Log In</h1>
 
-<form ng-submit="authCtrl.login()">
-      <div>
-          <input type="email" placeholder="Email" ng-model="authCtrl.user.email">
-      </div>
-      <br />
-      <div>
-          <input type="password" placeholder="Password" ng-model="authCtrl.user.password">
-      </div>
-      <br />
-      <input type="submit" value="Log In">
-</form>
+            <form ng-submit="authCtrl.login()">
+                  <div class="form-group">
+                      Email: 
+                      <input class="form-control" type="email" placeholder="Email" ng-model="authCtrl.user.email">
+                  </div>
+                  <br />
+                  <div class="form-group">
+                      Password:
+                      <input class="form-control" type="password" placeholder="Password" ng-model="authCtrl.user.password">
+                  </div>
+                  <br />
+                  <input class="btn btn-secondary" type="submit" value="Log In">
+                  <br />
+            </form>
+        </div>
+    </div>
+</div>
