--- a/app/assets/javascripts/auth/register.html
+++ b/app/assets/javascripts/auth/register.html
@@ -1,19 +1,31 @@
-<div>
-    <h1>Register</h1>
+<div class="row form">
+    <div class="col-md-6 col-md-offset-3">
+        <h1>Register</h1>
+
+        <form ng-submit="authCtrl.register()">
+              <div class="form-group">
+                  Email:
+                  <input class="form-control" type="email" placeholder="Email" ng-model="authCtrl.user.email">
+              </div>
+              <br />
+              <div class="form-group">
+                  Username:
+                  <input class="form-control" type="text" placeholder="Username" ng-model="authCtrl.user.username">
+              </div>
+              <br />
+              <div class="form-group">
+                  Password:
+                  <input class="form-control" type="password" placeholder="Password" ng-model="authCtrl.user.password">
+              </div>
+              <br />
+              <input class="btn btn-secondary" type="submit" value="Register">
+              <br />
+        </form>
+
+    </div>
 </div>
 
-<form ng-submit="authCtrl.register()">
-      <div>
-          <input type="email" placeholder="Email" ng-model="authCtrl.user.email">
-      </div>
-      <br />
-      <div>
-          <input type="text" placeholder="Username" ng-model="authCtrl.user.username">
-      </div>
-      <br />
-      <div>
-          <input type="password" placeholder="Password" ng-model="authCtrl.user.password">
-      </div>
-      <br />
-      <input type="submit" value="Register">
-</form>
+<div>
+    
+</div>
+
