finish styling static 'home.about' page

--- a/app/assets/javascripts/about/about.html
+++ b/app/assets/javascripts/about/about.html
@@ -1,1 +1,23 @@
-<h1>About</h1>
+<div id="about" class="row">
+  <div class="col-md-8 col-md-offset-2">
+      <h1>About</h1>
+      <hr>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h3>Mission</h3>
+              <p>PuckerUp aims to bring you a comprehensive list of sour beer breweries across the USA.  Every brewery. Every state. We want you to know exactly where to find your next sour brew.</p>
+              <p>We believe in the power of people.  We got the database started, but need you to help us make the ultimate list. Sign up. Share your knowledge by adding a brewery.</p>
+              <p>Beer lovers around the world -- we salute you!</p>
+
+          <h3>Creator</h3>
+              <p>Antonio David is a fan of many things, not the least of which are sour beers.  He was first introduced to them at the American Craft Beer Fest, held in Boston in 2015. It was love at first sip.</p>
+              <p>Antonio is also fullstack Ruby on Rails developer.  PuckerUp is an example of his ability to build a Single Page Application (SPA) using an AngularJS frontend and Rails API backend.</p>
+              <p>Click <a href="http://antoniodavid.me/" target="_blank"><strong>here</strong></a> to visit his homepage!</p>
+        </div>
+        <div class="panel-footer">
+          <h3><i>All sour beers. All the time. PuckerUp.</i></h3>
+        </div>
+      </div>
+  </div>
+</div>
+
