--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -49,7 +49,7 @@
               <a href="" ui-sref="home.breweries"><button type="button" class="btn btn-outline btn-lg">BreweryList</button></a>
             </div>
             <div class="col-md-6">
-              <p>Brew-through the USA on a roadtrip using our BreweryMap:</p>
+              <p>Brew-through the USA on a visual roadtrip using our BreweryMap:</p>
               <a href="" ui-sref="home.map"><button type="button" class="btn btn-outline btn-lg">BreweryMap</button></a>
             </div>
           </div>
