--- a/app/assets/javascripts/map/map.html
+++ b/app/assets/javascripts/map/map.html
@@ -1,10 +1,11 @@
 <div id="brewery-map" class="row">
     <div class="col-md-10 col-md-offset-1">
         <h1>BreweryMap</h1>
+        <hr>
         <p>Welcome to our BreweryMap a visualization of all the sour beer breweries in our collection for which we have coordinates.</p>
         <ul>
           <li>Hover over a marker for more detail</li>
-          <li>Click a marker to visit the brewery homepage</li>
+          <li>Click a marker to visit the Brewery homepage</li>
         </ul>
         <br />
 
