finish styling - added social icons to 'home.about'

--- a/app/assets/javascripts/about/about.html
+++ b/app/assets/javascripts/about/about.html
@@ -10,9 +10,39 @@
               <p>Beer lovers around the world -- we salute you!</p>
 
           <h3>Creator</h3>
-              <p>Antonio David is a fan of many things, not the least of which are sour beers.  He was first introduced to them at the American Craft Beer Fest, held in Boston in 2015. It was love at first sip.</p>
+              <p><a href="http://antoniodavid.me/" target="_blank"><strong>Antonio David</strong></a> is a fan of many things, not the least of which are sour beers.  He was first introduced to them at the American Craft Beer Fest, held in Boston in 2015. It was love at first sip.</p>
               <p>Antonio is also fullstack Ruby on Rails developer.  PuckerUp is an example of his ability to build a Single Page Application (SPA) using an AngularJS frontend and Rails API backend.</p>
-              <p>Click <a href="http://antoniodavid.me/" target="_blank"><strong>here</strong></a> to visit his homepage!</p>
+              <p>Also, feel free to connect with him via Twitter, LinkedIn, or Github:</p>
+              <div id="social" class="row">
+                <div class="col-md-12">
+                  <ul class="list-inline">
+                    <li>
+                      <a href="https://twitter.com/adavid128" target="_blank">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/agdavid" target="_blank">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                        </span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/agdavid" target="_blank">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                        </span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div> <!-- /.row -->
         </div>
         <div class="panel-footer">
           <h3><i>All sour beers. All the time. PuckerUp.</i></h3>
