tweak language on 'home.about'

--- a/app/assets/javascripts/about/about.html
+++ b/app/assets/javascripts/about/about.html
@@ -5,14 +5,14 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <h3>Mission</h3>
-              <p>PuckerUp aims to bring you a comprehensive list of sour beer breweries across the USA.  Every brewery. Every state. We want you to know exactly where to find your next sour brew.</p>
-              <p>We believe in the power of people.  We got the database started, but need you to help us make the ultimate list. Sign up. Share your knowledge by adding a brewery.</p>
-              <p>Beer lovers around the world -- we salute you!</p>
+              <p>PuckerUp aims to bring you a comprehensive list of sour beer breweries across the USA.  Every sour beer brewery. Every state. We want you to know exactly where to find your next sour brew.</p>
+              <p>We believe in the power of people.  We got the database started, but need you to help us make the ultimate list. <a href="" ui-sref="home.register">Sign up</a>. Share your knowledge by adding a sour beer brewery.</p>
+              <p>Sour beer lovers around the world -- we salute you!</p>
 
-          <h3>Creator</h3>
+          <h3>Brewmaster</h3>
               <p><a href="http://antoniodavid.me/" target="_blank"><strong>Antonio David</strong></a> is a fan of many things, not the least of which are sour beers.  He was first introduced to them at the American Craft Beer Fest, held in Boston in 2015. It was love at first sip.</p>
               <p>Antonio is also fullstack Ruby on Rails developer.  PuckerUp is an example of his ability to build a Single Page Application (SPA) using an AngularJS frontend and Rails API backend.</p>
-              <p>Also, feel free to connect with him via Twitter, LinkedIn, or Github:</p>
+              <p>Want to work with him? Connect with him via Twitter, LinkedIn, or Github:</p>
               <div id="social" class="row">
                 <div class="col-md-12">
                   <ul class="list-inline">
