update panel styling for 'home.map'

--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -36,7 +36,7 @@
             <div class="panel-footer">
                 <p><strong>Showing {{ breweriesCtrl.filteredList.length }}  Breweries <span ng-if="breweriesCtrl.searchTerm"> for the search '{{ breweriesCtrl.searchTerm }}'</span> <span ng-if="breweriesCtrl.searchState"> in the state of {{ breweriesCtrl.searchState }}</span>
         </strong></p>
-            </div>
+            </div><!-- /.panel-footer -->
         </div><!-- /.panel -->
         <hr>
 
