--- a/app/assets/javascripts/map/map.html
+++ b/app/assets/javascripts/map/map.html
@@ -2,28 +2,30 @@
     <div class="col-md-10 col-md-offset-1">
         <h1>BreweryMap</h1>
         <hr>
-        <p>Welcome to our BreweryMap a visualization of all the sour beer breweries in our collection for which we have coordinates.</p>
-        <ul>
-          <li>Hover over a marker for more detail</li>
-          <li>Click a marker to visit the Brewery homepage</li>
-        </ul>
-        <br />
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <p>Welcome to our BreweryMap a visualization of all the sour beer breweries in our collection for which we have coordinates.</p>
+                <ul>
+                  <li>Hover over a marker for more detail</li>
+                  <li>Click a marker to visit the Brewery homepage</li>
+                </ul>        
+            </div><!-- /.panel-body -->
+            <div class="panel-footer">
+                <p><strong>Don't see an awesome sour beer Brewery you know about?</strong></p>  
+                <p>Go ahead and add it to the PuckerUp database:</p>
+                <div ng-controller="HomeController as homeCtrl">
+                    <span ng-hide="homeCtrl.signedIn()"> 
+                        <p>You'll need to 
+                        <a href="" ui-sref="home.register"><button type="button" class="btn btn-secondary btn-lg">Register</button></a>
+                        - or -
+                        <a href="" ui-sref="home.login"><button type="button" class="btn btn-secondary btn-lg">Log In</button></a> to add a Brewery.
+                        </p>
+                    </span>
 
-        <p><strong>Don't see an awesome Brewery you know about?</strong></p>  
-        <p>Go ahead and add it to the PuckerUp database:</p>
-        <div ng-controller="HomeController as homeCtrl">
-            <span ng-hide="homeCtrl.signedIn()"> 
-                <p>You'll need to 
-                <a href="" ui-sref="home.register"><button type="button" class="btn btn-secondary btn-lg">Register</button></a>
-                - or -
-                <a href="" ui-sref="home.login"><button type="button" class="btn btn-secondary btn-lg">Log In</button></a> to add a Brewery.
-                </p>
-            </span>
-
-            <a href="" ng-show="homeCtrl.signedIn()" ui-sref="home.create"><button type="button" class="btn btn-secondary btn-lg">Add a Brewery</button></a>
-        </div> 
-        <br />
-
+                    <a href="" ng-show="homeCtrl.signedIn()" ui-sref="home.create"><button type="button" class="btn btn-secondary btn-lg">Add a Brewery</button></a>
+                </div>         
+            </div><!-- /.panel-footer -->
+        </div><!-- /.panel -->
         <div id="map" class="center">
          <!-- GoogleMaps JavaScript API to insert map here -->
         </div>
